# a01

./: .gitignore  404.html  README.md  a01-102103817.csv  a01-702300104.csv  generateAssignment.ipynb  index.html  mkdocs.yml  pyproject.toml  rollnos.txt  statements.txt
.github/workflows/: mkdocs.yml
assets/stylesheets/: extra.css
search/: search_index.json
