
[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "a01"
version = "0.0.1"               # May be automated using CI/CD
authors = [
  { name="Raghav B. Venkataramaiyer", email="bv.raghav@thapar.edu" },
]
# maintainers = [
#   { name="Raghav B. Venkataramaiyer",
#     email="bvraghav@gmail.com" },
# ]
description = "Assignment A01 (UTA027)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    # See: https://pypi.org/classifiers/
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Unix Shell",
]
dependencies = ["click"]

[project.scripts]
add_one = "a01.cli.add_one:cli"

[project.urls]
Homepage = "https://github.com/tiet-uta027/a01.git"
Issues = "https://github.com/tiet-uta027/a01.git/issues"

# 

# Adapted from https://stackoverflow.com/a/50156706
[tool.pytest.ini_options]
pythonpath = [
  "src"
]
# THE END -------------------------------------------
